--- a/src/styles/element-ui/message.css
+++ b/src/styles/element-ui/message.css
@@ -295,10 +295,10 @@
     .el-message--warning .el-message__content {
       color: #E6A23C; }
   .el-message--error {
-    background-color: #ffefef;
-    border-color: #fedfdf; }
+    background-color: #fef0f0;
+    border-color: #fde2e2; }
     .el-message--error .el-message__content {
-      color: #FA5E5F; }
+      color: #F56C6C; }
   .el-message__icon {
     margin-right: 10px; }
   .el-message__content {
@@ -323,7 +323,7 @@
   .el-message .el-icon-success {
     color: #67C23A; }
   .el-message .el-icon-error {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-message .el-icon-info {
     color: #909399; }
   .el-message .el-icon-warning {
