--- a/src/styles/element-ui/option.css
+++ b/src/styles/element-ui/option.css
@@ -269,5 +269,5 @@
   .el-select-dropdown__item.hover, .el-select-dropdown__item:hover {
     background-color: #F5F7FA; }
   .el-select-dropdown__item.selected {
-    color: #4C70E8;
+    color: #1890ff;
     font-weight: bold; }
