--- a/src/styles/element-ui/progress.css
+++ b/src/styles/element-ui/progress.css
@@ -293,9 +293,9 @@
   .el-progress.is-warning .el-progress__text {
     color: #E6A23C; }
   .el-progress.is-exception .el-progress-bar__inner {
-    background-color: #FA5E5F; }
+    background-color: #F56C6C; }
   .el-progress.is-exception .el-progress__text {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-progress-bar {
   padding-right: 50px;
@@ -317,7 +317,7 @@
     left: 0;
     top: 0;
     height: 100%;
-    background-color: #4C70E8;
+    background-color: #1890ff;
     text-align: right;
     border-radius: 100px;
     line-height: 1;
