--- a/src/styles/element-ui/reset.css
+++ b/src/styles/element-ui/reset.css
@@ -127,12 +127,12 @@ body {
   -webkit-font-smoothing: antialiased; }
 
 a {
-  color: #4C70E8;
+  color: #1890ff;
   text-decoration: none; }
   a:hover, a:focus {
-    color: #708ded; }
+    color: #46a6ff; }
   a:active {
-    color: #4465d1; }
+    color: #1682e6; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #606266;
