--- a/src/styles/element-ui/backtop.css
+++ b/src/styles/element-ui/backtop.css
@@ -254,7 +254,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  color: #4C70E8;
+  color: #1890ff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
