--- a/src/styles/element-ui/badge.css
+++ b/src/styles/element-ui/badge.css
@@ -253,7 +253,7 @@
   vertical-align: middle;
   display: inline-block; }
   .el-badge__content {
-    background-color: #FA5E5F;
+    background-color: #F56C6C;
     border-radius: 10px;
     color: #FFFFFF;
     display: inline-block;
@@ -279,7 +279,7 @@
       right: 0;
       border-radius: 50%; }
     .el-badge__content--primary {
-      background-color: #4C70E8; }
+      background-color: #1890ff; }
     .el-badge__content--success {
       background-color: #67C23A; }
     .el-badge__content--warning {
@@ -287,4 +287,4 @@
     .el-badge__content--info {
       background-color: #909399; }
     .el-badge__content--danger {
-      background-color: #FA5E5F; }
+      background-color: #F56C6C; }
