--- a/src/styles/element-ui/collapse.css
+++ b/src/styles/element-ui/collapse.css
@@ -521,7 +521,7 @@
       -webkit-transform: rotate(90deg);
       transform: rotate(90deg); }
   .el-collapse-item__header.focusing:focus:not(:hover) {
-    color: #4C70E8; }
+    color: #1890ff; }
   .el-collapse-item__header.is-active {
     border-bottom-color: transparent; }
 
