--- a/src/styles/element-ui/color-picker.css
+++ b/src/styles/element-ui/color-picker.css
@@ -273,8 +273,8 @@
     .el-color-predefine__color-selector:nth-child(10n + 1) {
       margin-left: 0; }
     .el-color-predefine__color-selector.selected {
-      -webkit-box-shadow: 0 0 3px 2px #4C70E8;
-      box-shadow: 0 0 3px 2px #4C70E8; }
+      -webkit-box-shadow: 0 0 3px 2px #1890ff;
+      box-shadow: 0 0 3px 2px #1890ff; }
     .el-color-predefine__color-selector > div {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -423,16 +423,16 @@
       color: #cccccc;
       cursor: not-allowed; }
     .el-color-dropdown__btn:hover {
-      color: #4C70E8;
-      border-color: #4C70E8; }
+      color: #1890ff;
+      border-color: #1890ff; }
   .el-color-dropdown__link-btn {
     cursor: pointer;
-    color: #4C70E8;
+    color: #1890ff;
     text-decoration: none;
     padding: 15px;
     font-size: 12px; }
     .el-color-dropdown__link-btn:hover {
-      color: tint(#4C70E8, 20%); }
+      color: tint(#1890ff, 20%); }
 
 .el-color-picker {
   display: inline-block;
