--- a/src/styles/element-ui/form.css
+++ b/src/styles/element-ui/form.css
@@ -333,7 +333,7 @@
     .el-form-item__content .el-input-group {
       vertical-align: top; }
   .el-form-item__error {
-    color: #FA5E5F;
+    color: #F56C6C;
     font-size: 12px;
     line-height: 1;
     padding-top: 4px;
@@ -349,16 +349,16 @@
   .el-form-item.is-required:not(.is-no-asterisk) > .el-form-item__label:before,
   .el-form-item.is-required:not(.is-no-asterisk) .el-form-item__label-wrap > .el-form-item__label:before {
     content: '*';
-    color: #FA5E5F;
+    color: #F56C6C;
     margin-right: 4px; }
   .el-form-item.is-error .el-input__inner, .el-form-item.is-error .el-input__inner:focus,
   .el-form-item.is-error .el-textarea__inner,
   .el-form-item.is-error .el-textarea__inner:focus {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-form-item.is-error .el-input-group__append .el-input__inner,
   .el-form-item.is-error .el-input-group__prepend .el-input__inner {
     border-color: transparent; }
   .el-form-item.is-error .el-input__validateIcon {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-form-item--feedback .el-input__validateIcon {
     display: inline-block; }
