--- a/src/styles/element-ui/icon.css
+++ b/src/styles/element-ui/icon.css
@@ -123,6 +123,7 @@
   src: url("fonts/element-icons.woff") format("woff"), url("fonts/element-icons.ttf") format("truetype");
   /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
   font-weight: normal;
+  font-display: "auto";
   font-style: normal; }
 
 [class^="el-icon-"], [class*=" el-icon-"] {
