--- a/src/styles/element-ui/loading.css
+++ b/src/styles/element-ui/loading.css
@@ -280,7 +280,7 @@
   text-align: center;
   position: absolute; }
   .el-loading-spinner .el-loading-text {
-    color: #4C70E8;
+    color: #1890ff;
     margin: 3px 0;
     font-size: 14px; }
   .el-loading-spinner .circular {
@@ -294,10 +294,10 @@
     stroke-dasharray: 90, 150;
     stroke-dashoffset: 0;
     stroke-width: 2;
-    stroke: #4C70E8;
+    stroke: #1890ff;
     stroke-linecap: round; }
   .el-loading-spinner i {
-    color: #4C70E8; }
+    color: #1890ff; }
 
 .el-loading-fade-enter,
 .el-loading-fade-leave-active {
