--- a/src/styles/element-ui/notification.css
+++ b/src/styles/element-ui/notification.css
@@ -303,7 +303,7 @@
   .el-notification .el-icon-success {
     color: #67C23A; }
   .el-notification .el-icon-error {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-notification .el-icon-info {
     color: #909399; }
   .el-notification .el-icon-warning {
