--- a/src/styles/element-ui/select-dropdown.css
+++ b/src/styles/element-ui/select-dropdown.css
@@ -589,7 +589,7 @@
   box-sizing: border-box;
   margin: 5px 0; }
   .el-select-dropdown.is-multiple .el-select-dropdown__item.selected {
-    color: #4C70E8;
+    color: #1890ff;
     background-color: #FFFFFF; }
     .el-select-dropdown.is-multiple .el-select-dropdown__item.selected.hover {
       background-color: #F5F7FA; }
