--- a/src/styles/element-ui/select.css
+++ b/src/styles/element-ui/select.css
@@ -839,7 +839,7 @@
   box-sizing: border-box;
   margin: 5px 0; }
   .el-select-dropdown.is-multiple .el-select-dropdown__item.selected {
-    color: #4C70E8;
+    color: #1890ff;
     background-color: #FFFFFF; }
     .el-select-dropdown.is-multiple .el-select-dropdown__item.selected.hover {
       background-color: #F5F7FA; }
@@ -1156,7 +1156,7 @@
       border-color: #C0C4CC; }
     .el-textarea__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-textarea .el-input__count {
     color: #909399;
     background: #FFFFFF;
@@ -1178,9 +1178,9 @@
     .el-textarea.is-disabled .el-textarea__inner::placeholder {
       color: #C0C4CC; }
   .el-textarea.is-exceed .el-textarea__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-textarea.is-exceed .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-input {
   position: relative;
@@ -1256,7 +1256,7 @@
       border-color: #C0C4CC; }
     .el-input__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-input__suffix {
     position: absolute;
     height: 100%;
@@ -1295,7 +1295,7 @@
     pointer-events: none; }
   .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-input.is-disabled .el-input__inner {
     background-color: #F5F7FA;
     border-color: #E4E7ED;
@@ -1312,9 +1312,9 @@
   .el-input.is-disabled .el-input__icon {
     cursor: not-allowed; }
   .el-input.is-exceed .el-input__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-input.is-exceed .el-input__suffix .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-input--suffix .el-input__inner {
     padding-right: 30px; }
   .el-input--prefix .el-input__inner {
@@ -1658,15 +1658,15 @@
 /* Break-point
 --------------------------*/
 .el-tag {
-  background-color: #edf1fd;
-  border-color: #dbe2fa;
-  color: #4c70e8;
+  background-color: #e8f4ff;
+  border-color: #d1e9ff;
+  color: #1890ff;
   display: inline-block;
   height: 32px;
   padding: 0 10px;
   line-height: 30px;
   font-size: 12px;
-  color: #4C70E8;
+  color: #1890ff;
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
@@ -1674,12 +1674,12 @@
   box-sizing: border-box;
   white-space: nowrap; }
   .el-tag.is-hit {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-tag .el-tag__close {
-    color: #4c70e8; }
+    color: #1890ff; }
     .el-tag .el-tag__close:hover {
       color: #FFFFFF;
-      background-color: #4c70e8; }
+      background-color: #1890ff; }
   .el-tag.el-tag--info {
     background-color: #f4f4f5;
     border-color: #e9e9eb;
@@ -1714,16 +1714,16 @@
         color: #FFFFFF;
         background-color: #e6a23c; }
   .el-tag.el-tag--danger {
-    background-color: #ffefef;
-    border-color: #fedfdf;
-    color: #fa5e5f; }
+    background-color: #fef0f0;
+    border-color: #fde2e2;
+    color: #f56c6c; }
     .el-tag.el-tag--danger.is-hit {
-      border-color: #FA5E5F; }
+      border-color: #F56C6C; }
     .el-tag.el-tag--danger .el-tag__close {
-      color: #fa5e5f; }
+      color: #f56c6c; }
       .el-tag.el-tag--danger .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #fa5e5f; }
+        background-color: #f56c6c; }
   .el-tag .el-icon-close {
     border-radius: 50%;
     text-align: center;
@@ -1739,16 +1739,16 @@
     .el-tag .el-icon-close::before {
       display: block; }
   .el-tag--dark {
-    background-color: #4c70e8;
-    border-color: #4c70e8;
+    background-color: #1890ff;
+    border-color: #1890ff;
     color: white; }
     .el-tag--dark.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--dark .el-tag__close {
       color: white; }
       .el-tag--dark .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #708ded; }
+        background-color: #46a6ff; }
     .el-tag--dark.el-tag--info {
       background-color: #909399;
       border-color: #909399;
@@ -1783,27 +1783,27 @@
           color: #FFFFFF;
           background-color: #ebb563; }
     .el-tag--dark.el-tag--danger {
-      background-color: #fa5e5f;
-      border-color: #fa5e5f;
+      background-color: #f56c6c;
+      border-color: #f56c6c;
       color: white; }
       .el-tag--dark.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--dark.el-tag--danger .el-tag__close {
         color: white; }
         .el-tag--dark.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fb7e7f; }
+          background-color: #f78989; }
   .el-tag--plain {
     background-color: white;
-    border-color: #b7c6f6;
-    color: #4c70e8; }
+    border-color: #a3d3ff;
+    color: #1890ff; }
     .el-tag--plain.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--plain .el-tag__close {
-      color: #4c70e8; }
+      color: #1890ff; }
       .el-tag--plain .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #4c70e8; }
+        background-color: #1890ff; }
     .el-tag--plain.el-tag--info {
       background-color: white;
       border-color: #d3d4d6;
@@ -1839,15 +1839,15 @@
           background-color: #e6a23c; }
     .el-tag--plain.el-tag--danger {
       background-color: white;
-      border-color: #fdbfbf;
-      color: #fa5e5f; }
+      border-color: #fbc4c4;
+      color: #f56c6c; }
       .el-tag--plain.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--plain.el-tag--danger .el-tag__close {
-        color: #fa5e5f; }
+        color: #f56c6c; }
         .el-tag--plain.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fa5e5f; }
+          background-color: #f56c6c; }
   .el-tag--medium {
     height: 28px;
     line-height: 26px; }
@@ -2141,7 +2141,7 @@
   .el-select-dropdown__item.hover, .el-select-dropdown__item:hover {
     background-color: #F5F7FA; }
   .el-select-dropdown__item.selected {
-    color: #4C70E8;
+    color: #1890ff;
     font-weight: bold; }
 
 /* BEM support Func
@@ -2681,9 +2681,11 @@
   .el-scrollbar__wrap {
     overflow: scroll;
     height: 100%; }
-    .el-scrollbar__wrap--hidden-default::-webkit-scrollbar {
-      width: 0;
-      height: 0; }
+    .el-scrollbar__wrap--hidden-default {
+      scrollbar-width: none; }
+      .el-scrollbar__wrap--hidden-default::-webkit-scrollbar {
+        width: 0;
+        height: 0; }
   .el-scrollbar__thumb {
     position: relative;
     display: block;
@@ -2728,7 +2730,7 @@
     cursor: pointer;
     padding-right: 35px; }
     .el-select .el-input__inner:focus {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-select .el-input .el-select__caret {
     color: #C0C4CC;
     font-size: 14px;
@@ -2758,7 +2760,7 @@
     .el-select .el-input.is-disabled .el-input__inner:hover {
       border-color: #E4E7ED; }
   .el-select .el-input.is-focus .el-input__inner {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-select > .el-input {
     display: block; }
   .el-select__input {
