--- a/src/styles/element-ui/slider.css
+++ b/src/styles/element-ui/slider.css
@@ -662,7 +662,7 @@
       border-color: #C0C4CC; }
     .el-textarea__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-textarea .el-input__count {
     color: #909399;
     background: #FFFFFF;
@@ -684,9 +684,9 @@
     .el-textarea.is-disabled .el-textarea__inner::placeholder {
       color: #C0C4CC; }
   .el-textarea.is-exceed .el-textarea__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-textarea.is-exceed .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-input {
   position: relative;
@@ -762,7 +762,7 @@
       border-color: #C0C4CC; }
     .el-input__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-input__suffix {
     position: absolute;
     height: 100%;
@@ -801,7 +801,7 @@
     pointer-events: none; }
   .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-input.is-disabled .el-input__inner {
     background-color: #F5F7FA;
     border-color: #E4E7ED;
@@ -818,9 +818,9 @@
   .el-input.is-disabled .el-input__icon {
     cursor: not-allowed; }
   .el-input.is-exceed .el-input__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-input.is-exceed .el-input__suffix .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-input--suffix .el-input__inner {
     padding-right: 30px; }
   .el-input--prefix .el-input__inner {
@@ -937,9 +937,9 @@
     cursor: pointer;
     font-size: 13px; }
     .el-input-number__increase:hover, .el-input-number__decrease:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
       .el-input-number__increase:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled), .el-input-number__decrease:hover:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled) {
-        border-color: #4C70E8; }
+        border-color: #1890ff; }
     .el-input-number__increase.is-disabled, .el-input-number__decrease.is-disabled {
       color: #C0C4CC;
       cursor: not-allowed; }
@@ -1534,7 +1534,7 @@
 
 .el-slider__bar {
   height: 6px;
-  background-color: #4C70E8;
+  background-color: #1890ff;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
   position: absolute; }
@@ -1572,7 +1572,7 @@
 .el-slider__button {
   width: 16px;
   height: 16px;
-  border: solid 2px #4C70E8;
+  border: solid 2px #1890ff;
   background-color: #FFFFFF;
   border-radius: 50%;
   -webkit-transition: .2s;
@@ -1669,7 +1669,7 @@
         border-color: #C0C4CC; }
       .el-slider.is-vertical.el-slider--with-input .el-slider__input:active .el-input-number__decrease,
       .el-slider.is-vertical.el-slider--with-input .el-slider__input:active .el-input-number__increase {
-        border-color: #4C70E8; }
+        border-color: #1890ff; }
   .el-slider.is-vertical .el-slider__marks-text {
     margin-top: 0;
     left: 15px;
