--- a/src/styles/element-ui/step.css
+++ b/src/styles/element-ui/step.css
@@ -277,11 +277,11 @@
       color: #67C23A;
       border-color: #67C23A; }
     .el-step__head.is-error {
-      color: #FA5E5F;
-      border-color: #FA5E5F; }
+      color: #F56C6C;
+      border-color: #F56C6C; }
     .el-step__head.is-finish {
-      color: #4C70E8;
-      border-color: #4C70E8; }
+      color: #1890ff;
+      border-color: #1890ff; }
   .el-step__icon {
     position: relative;
     z-index: 1;
@@ -353,9 +353,9 @@
     .el-step__title.is-success {
       color: #67C23A; }
     .el-step__title.is-error {
-      color: #FA5E5F; }
+      color: #F56C6C; }
     .el-step__title.is-finish {
-      color: #4C70E8; }
+      color: #1890ff; }
   .el-step__description {
     padding-right: 10%;
     margin-top: -5px;
@@ -369,9 +369,9 @@
     .el-step__description.is-success {
       color: #67C23A; }
     .el-step__description.is-error {
-      color: #FA5E5F; }
+      color: #F56C6C; }
     .el-step__description.is-finish {
-      color: #4C70E8; }
+      color: #1890ff; }
   .el-step.is-horizontal {
     display: inline-block; }
     .el-step.is-horizontal .el-step__line {
