--- a/src/styles/element-ui/switch.css
+++ b/src/styles/element-ui/switch.css
@@ -274,7 +274,7 @@
     vertical-align: middle;
     color: #303133; }
     .el-switch__label.is-active {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-switch__label--left {
       margin-right: 10px; }
     .el-switch__label--right {
@@ -317,8 +317,8 @@
       height: 16px;
       background-color: #FFFFFF; }
   .el-switch.is-checked .el-switch__core {
-    border-color: #4C70E8;
-    background-color: #4C70E8; }
+    border-color: #1890ff;
+    background-color: #1890ff; }
     .el-switch.is-checked .el-switch__core::after {
       left: 100%;
       margin-left: -17px; }
