--- a/src/styles/element-ui/table.css
+++ b/src/styles/element-ui/table.css
@@ -521,7 +521,7 @@
     line-height: normal;
     height: 40px; }
     .el-checkbox.is-bordered.is-checked {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox.is-bordered.is-disabled {
       border-color: #EBEEF5;
       cursor: not-allowed; }
@@ -595,20 +595,20 @@
       color: #C0C4CC;
       cursor: not-allowed; }
     .el-checkbox__input.is-checked .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-checked .el-checkbox__inner::after {
         -webkit-transform: rotate(45deg) scaleY(1);
         transform: rotate(45deg) scaleY(1); }
     .el-checkbox__input.is-checked + .el-checkbox__label {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox__input.is-focus {
       /*focus时 视觉上区分*/ }
       .el-checkbox__input.is-focus .el-checkbox__inner {
-        border-color: #4C70E8; }
+        border-color: #1890ff; }
     .el-checkbox__input.is-indeterminate .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-indeterminate .el-checkbox__inner::before {
         content: '';
         position: absolute;
@@ -636,7 +636,7 @@
     -webkit-transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46);
     transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46); }
     .el-checkbox__inner:hover {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox__inner::after {
       -webkit-box-sizing: content-box;
       box-sizing: content-box;
@@ -705,7 +705,7 @@
     .el-checkbox-button__inner.is-round {
       padding: 12px 20px; }
     .el-checkbox-button__inner:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox-button__inner [class*="el-icon-"] {
       line-height: 0.9; }
       .el-checkbox-button__inner [class*="el-icon-"] + span {
@@ -718,12 +718,12 @@
     z-index: -1; }
   .el-checkbox-button.is-checked .el-checkbox-button__inner {
     color: #FFFFFF;
-    background-color: #4C70E8;
-    border-color: #4C70E8;
-    -webkit-box-shadow: -1px 0 0 0 #94a9f1;
-    box-shadow: -1px 0 0 0 #94a9f1; }
+    background-color: #1890ff;
+    border-color: #1890ff;
+    -webkit-box-shadow: -1px 0 0 0 #74bcff;
+    box-shadow: -1px 0 0 0 #74bcff; }
   .el-checkbox-button.is-checked:first-child .el-checkbox-button__inner {
-    border-left-color: #4C70E8; }
+    border-left-color: #1890ff; }
   .el-checkbox-button.is-disabled .el-checkbox-button__inner {
     color: #C0C4CC;
     cursor: not-allowed;
@@ -740,7 +740,7 @@
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .el-checkbox-button.is-focus .el-checkbox-button__inner {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-checkbox-button:last-child .el-checkbox-button__inner {
     border-radius: 0 4px 4px 0; }
   .el-checkbox-button--medium .el-checkbox-button__inner {
@@ -1016,15 +1016,15 @@
 /* Break-point
 --------------------------*/
 .el-tag {
-  background-color: #edf1fd;
-  border-color: #dbe2fa;
-  color: #4c70e8;
+  background-color: #e8f4ff;
+  border-color: #d1e9ff;
+  color: #1890ff;
   display: inline-block;
   height: 32px;
   padding: 0 10px;
   line-height: 30px;
   font-size: 12px;
-  color: #4C70E8;
+  color: #1890ff;
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
@@ -1032,12 +1032,12 @@
   box-sizing: border-box;
   white-space: nowrap; }
   .el-tag.is-hit {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-tag .el-tag__close {
-    color: #4c70e8; }
+    color: #1890ff; }
     .el-tag .el-tag__close:hover {
       color: #FFFFFF;
-      background-color: #4c70e8; }
+      background-color: #1890ff; }
   .el-tag.el-tag--info {
     background-color: #f4f4f5;
     border-color: #e9e9eb;
@@ -1072,16 +1072,16 @@
         color: #FFFFFF;
         background-color: #e6a23c; }
   .el-tag.el-tag--danger {
-    background-color: #ffefef;
-    border-color: #fedfdf;
-    color: #fa5e5f; }
+    background-color: #fef0f0;
+    border-color: #fde2e2;
+    color: #f56c6c; }
     .el-tag.el-tag--danger.is-hit {
-      border-color: #FA5E5F; }
+      border-color: #F56C6C; }
     .el-tag.el-tag--danger .el-tag__close {
-      color: #fa5e5f; }
+      color: #f56c6c; }
       .el-tag.el-tag--danger .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #fa5e5f; }
+        background-color: #f56c6c; }
   .el-tag .el-icon-close {
     border-radius: 50%;
     text-align: center;
@@ -1097,16 +1097,16 @@
     .el-tag .el-icon-close::before {
       display: block; }
   .el-tag--dark {
-    background-color: #4c70e8;
-    border-color: #4c70e8;
+    background-color: #1890ff;
+    border-color: #1890ff;
     color: white; }
     .el-tag--dark.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--dark .el-tag__close {
       color: white; }
       .el-tag--dark .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #708ded; }
+        background-color: #46a6ff; }
     .el-tag--dark.el-tag--info {
       background-color: #909399;
       border-color: #909399;
@@ -1141,27 +1141,27 @@
           color: #FFFFFF;
           background-color: #ebb563; }
     .el-tag--dark.el-tag--danger {
-      background-color: #fa5e5f;
-      border-color: #fa5e5f;
+      background-color: #f56c6c;
+      border-color: #f56c6c;
       color: white; }
       .el-tag--dark.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--dark.el-tag--danger .el-tag__close {
         color: white; }
         .el-tag--dark.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fb7e7f; }
+          background-color: #f78989; }
   .el-tag--plain {
     background-color: white;
-    border-color: #b7c6f6;
-    color: #4c70e8; }
+    border-color: #a3d3ff;
+    color: #1890ff; }
     .el-tag--plain.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--plain .el-tag__close {
-      color: #4c70e8; }
+      color: #1890ff; }
       .el-tag--plain .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #4c70e8; }
+        background-color: #1890ff; }
     .el-tag--plain.el-tag--info {
       background-color: white;
       border-color: #d3d4d6;
@@ -1197,15 +1197,15 @@
           background-color: #e6a23c; }
     .el-tag--plain.el-tag--danger {
       background-color: white;
-      border-color: #fdbfbf;
-      color: #fa5e5f; }
+      border-color: #fbc4c4;
+      color: #f56c6c; }
       .el-tag--plain.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--plain.el-tag--danger .el-tag__close {
-        color: #fa5e5f; }
+        color: #f56c6c; }
         .el-tag--plain.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fa5e5f; }
+          background-color: #f56c6c; }
   .el-tag--medium {
     height: 28px;
     line-height: 26px; }
@@ -1708,7 +1708,6 @@
     min-height: 60px;
     text-align: center;
     width: 100%;
-    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1808,34 +1807,23 @@
   .el-table th.is-sortable {
     cursor: pointer; }
   .el-table th {
-    white-space: nowrap;
     overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     background-color: #FFFFFF; }
-    .el-table th div {
+    .el-table th > .cell {
       display: inline-block;
-      padding-left: 10px;
-      padding-right: 10px;
-      line-height: 40px;
       -webkit-box-sizing: border-box;
       box-sizing: border-box;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis; }
-    .el-table th > .cell {
       position: relative;
-      word-wrap: normal;
-      text-overflow: ellipsis;
-      display: inline-block;
       vertical-align: middle;
-      width: 100%;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box; }
+      padding-left: 10px;
+      padding-right: 10px;
+      width: 100%; }
       .el-table th > .cell.highlight {
-        color: #4C70E8; }
+        color: #1890ff; }
     .el-table th.required > div::before {
       display: inline-block;
       content: "";
@@ -2009,9 +1997,9 @@
       border-top-color: #C0C4CC;
       bottom: 7px; }
   .el-table .ascending .sort-caret.ascending {
-    border-bottom-color: #4C70E8; }
+    border-bottom-color: #1890ff; }
   .el-table .descending .sort-caret.descending {
-    border-top-color: #4C70E8; }
+    border-top-color: #1890ff; }
   .el-table .hidden-columns {
     visibility: hidden;
     position: absolute;
@@ -2019,11 +2007,11 @@
   .el-table--striped .el-table__body tr.el-table__row--striped td {
     background: #FAFAFA; }
   .el-table--striped .el-table__body tr.el-table__row--striped.current-row td {
-    background-color: #edf1fd; }
+    background-color: #e8f4ff; }
   .el-table__body tr.hover-row > td, .el-table__body tr.hover-row.current-row > td, .el-table__body tr.hover-row.el-table__row--striped > td, .el-table__body tr.hover-row.el-table__row--striped.current-row > td {
     background-color: #F5F7FA; }
   .el-table__body tr.current-row > td {
-    background-color: #edf1fd; }
+    background-color: #e8f4ff; }
   .el-table__column-resize-proxy {
     position: absolute;
     left: 200px;
