--- a/src/styles/element-ui/tag.css
+++ b/src/styles/element-ui/tag.css
@@ -249,15 +249,15 @@
 /* Break-point
 --------------------------*/
 .el-tag {
-  background-color: #edf1fd;
-  border-color: #dbe2fa;
-  color: #4c70e8;
+  background-color: #e8f4ff;
+  border-color: #d1e9ff;
+  color: #1890ff;
   display: inline-block;
   height: 32px;
   padding: 0 10px;
   line-height: 30px;
   font-size: 12px;
-  color: #4C70E8;
+  color: #1890ff;
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
@@ -265,12 +265,12 @@
   box-sizing: border-box;
   white-space: nowrap; }
   .el-tag.is-hit {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-tag .el-tag__close {
-    color: #4c70e8; }
+    color: #1890ff; }
     .el-tag .el-tag__close:hover {
       color: #FFFFFF;
-      background-color: #4c70e8; }
+      background-color: #1890ff; }
   .el-tag.el-tag--info {
     background-color: #f4f4f5;
     border-color: #e9e9eb;
@@ -305,16 +305,16 @@
         color: #FFFFFF;
         background-color: #e6a23c; }
   .el-tag.el-tag--danger {
-    background-color: #ffefef;
-    border-color: #fedfdf;
-    color: #fa5e5f; }
+    background-color: #fef0f0;
+    border-color: #fde2e2;
+    color: #f56c6c; }
     .el-tag.el-tag--danger.is-hit {
-      border-color: #FA5E5F; }
+      border-color: #F56C6C; }
     .el-tag.el-tag--danger .el-tag__close {
-      color: #fa5e5f; }
+      color: #f56c6c; }
       .el-tag.el-tag--danger .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #fa5e5f; }
+        background-color: #f56c6c; }
   .el-tag .el-icon-close {
     border-radius: 50%;
     text-align: center;
@@ -330,16 +330,16 @@
     .el-tag .el-icon-close::before {
       display: block; }
   .el-tag--dark {
-    background-color: #4c70e8;
-    border-color: #4c70e8;
+    background-color: #1890ff;
+    border-color: #1890ff;
     color: white; }
     .el-tag--dark.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--dark .el-tag__close {
       color: white; }
       .el-tag--dark .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #708ded; }
+        background-color: #46a6ff; }
     .el-tag--dark.el-tag--info {
       background-color: #909399;
       border-color: #909399;
@@ -374,27 +374,27 @@
           color: #FFFFFF;
           background-color: #ebb563; }
     .el-tag--dark.el-tag--danger {
-      background-color: #fa5e5f;
-      border-color: #fa5e5f;
+      background-color: #f56c6c;
+      border-color: #f56c6c;
       color: white; }
       .el-tag--dark.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--dark.el-tag--danger .el-tag__close {
         color: white; }
         .el-tag--dark.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fb7e7f; }
+          background-color: #f78989; }
   .el-tag--plain {
     background-color: white;
-    border-color: #b7c6f6;
-    color: #4c70e8; }
+    border-color: #a3d3ff;
+    color: #1890ff; }
     .el-tag--plain.is-hit {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-tag--plain .el-tag__close {
-      color: #4c70e8; }
+      color: #1890ff; }
       .el-tag--plain .el-tag__close:hover {
         color: #FFFFFF;
-        background-color: #4c70e8; }
+        background-color: #1890ff; }
     .el-tag--plain.el-tag--info {
       background-color: white;
       border-color: #d3d4d6;
@@ -430,15 +430,15 @@
           background-color: #e6a23c; }
     .el-tag--plain.el-tag--danger {
       background-color: white;
-      border-color: #fdbfbf;
-      color: #fa5e5f; }
+      border-color: #fbc4c4;
+      color: #f56c6c; }
       .el-tag--plain.el-tag--danger.is-hit {
-        border-color: #FA5E5F; }
+        border-color: #F56C6C; }
       .el-tag--plain.el-tag--danger .el-tag__close {
-        color: #fa5e5f; }
+        color: #f56c6c; }
         .el-tag--plain.el-tag--danger .el-tag__close:hover {
           color: #FFFFFF;
-          background-color: #fa5e5f; }
+          background-color: #f56c6c; }
   .el-tag--medium {
     height: 28px;
     line-height: 26px; }
