--- a/src/styles/element-ui/time-picker.css
+++ b/src/styles/element-ui/time-picker.css
@@ -560,9 +560,9 @@
   line-height: 1; }
 
 .el-range-editor.is-active {
-  border-color: #4C70E8; }
+  border-color: #1890ff; }
   .el-range-editor.is-active:hover {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
 
 .el-range-editor--medium.el-input__inner {
   height: 36px; }
@@ -784,10 +784,10 @@
     outline: none;
     cursor: pointer; }
     .el-picker-panel__shortcut:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-picker-panel__shortcut.active {
       background-color: #e6f1fe;
-      color: #4C70E8; }
+      color: #1890ff; }
   .el-picker-panel__btn {
     border: 1px solid #dcdcdc;
     color: #333;
@@ -810,7 +810,7 @@
     outline: none;
     margin-top: 8px; }
     .el-picker-panel__icon-btn:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-picker-panel__icon-btn.is-disabled {
       color: #bbb; }
       .el-picker-panel__icon-btn.is-disabled:hover {
@@ -991,7 +991,7 @@
   line-height: 30px;
   cursor: pointer; }
   .el-time-spinner__arrow:hover {
-    color: #4C70E8; }
+    color: #1890ff; }
   .el-time-spinner__arrow.el-icon-arrow-up {
     top: 10px; }
   .el-time-spinner__arrow.el-icon-arrow-down {
@@ -1217,7 +1217,7 @@
     color: #303133; }
     .el-time-panel__btn.confirm {
       font-weight: 800;
-      color: #4C70E8; }
+      color: #1890ff; }
 
 /* Element Chalk Variables */
 /* Transition
@@ -1645,7 +1645,7 @@
       border-color: #C0C4CC; }
     .el-textarea__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-textarea .el-input__count {
     color: #909399;
     background: #FFFFFF;
@@ -1667,9 +1667,9 @@
     .el-textarea.is-disabled .el-textarea__inner::placeholder {
       color: #C0C4CC; }
   .el-textarea.is-exceed .el-textarea__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-textarea.is-exceed .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-input {
   position: relative;
@@ -1745,7 +1745,7 @@
       border-color: #C0C4CC; }
     .el-input__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-input__suffix {
     position: absolute;
     height: 100%;
@@ -1784,7 +1784,7 @@
     pointer-events: none; }
   .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-input.is-disabled .el-input__inner {
     background-color: #F5F7FA;
     border-color: #E4E7ED;
@@ -1801,9 +1801,9 @@
   .el-input.is-disabled .el-input__icon {
     cursor: not-allowed; }
   .el-input.is-exceed .el-input__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-input.is-exceed .el-input__suffix .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-input--suffix .el-input__inner {
     padding-right: 30px; }
   .el-input--prefix .el-input__inner {
@@ -2156,9 +2156,11 @@
   .el-scrollbar__wrap {
     overflow: scroll;
     height: 100%; }
-    .el-scrollbar__wrap--hidden-default::-webkit-scrollbar {
-      width: 0;
-      height: 0; }
+    .el-scrollbar__wrap--hidden-default {
+      scrollbar-width: none; }
+      .el-scrollbar__wrap--hidden-default::-webkit-scrollbar {
+        width: 0;
+        height: 0; }
   .el-scrollbar__thumb {
     position: relative;
     display: block;
