--- a/src/styles/element-ui/transfer.css
+++ b/src/styles/element-ui/transfer.css
@@ -533,7 +533,7 @@
       border-color: #C0C4CC; }
     .el-textarea__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-textarea .el-input__count {
     color: #909399;
     background: #FFFFFF;
@@ -555,9 +555,9 @@
     .el-textarea.is-disabled .el-textarea__inner::placeholder {
       color: #C0C4CC; }
   .el-textarea.is-exceed .el-textarea__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-textarea.is-exceed .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-input {
   position: relative;
@@ -633,7 +633,7 @@
       border-color: #C0C4CC; }
     .el-input__inner:focus {
       outline: none;
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
   .el-input__suffix {
     position: absolute;
     height: 100%;
@@ -672,7 +672,7 @@
     pointer-events: none; }
   .el-input.is-active .el-input__inner {
     outline: none;
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-input.is-disabled .el-input__inner {
     background-color: #F5F7FA;
     border-color: #E4E7ED;
@@ -689,9 +689,9 @@
   .el-input.is-disabled .el-input__icon {
     cursor: not-allowed; }
   .el-input.is-exceed .el-input__inner {
-    border-color: #FA5E5F; }
+    border-color: #F56C6C; }
   .el-input.is-exceed .el-input__suffix .el-input__count {
-    color: #FA5E5F; }
+    color: #F56C6C; }
   .el-input--suffix .el-input__inner {
     padding-right: 30px; }
   .el-input--prefix .el-input__inner {
@@ -1183,12 +1183,12 @@
   .el-button.is-round {
     padding: 12px 20px; }
   .el-button:hover, .el-button:focus {
-    color: #4C70E8;
-    border-color: #c9d4f8;
-    background-color: #edf1fd; }
+    color: #1890ff;
+    border-color: #badeff;
+    background-color: #e8f4ff; }
   .el-button:active {
-    color: #4465d1;
-    border-color: #4465d1;
+    color: #1682e6;
+    border-color: #1682e6;
     outline: none; }
   .el-button::-moz-focus-inner {
     border: 0; }
@@ -1196,16 +1196,16 @@
     margin-left: 5px; }
   .el-button.is-plain:hover, .el-button.is-plain:focus {
     background: #FFFFFF;
-    border-color: #4C70E8;
-    color: #4C70E8; }
+    border-color: #1890ff;
+    color: #1890ff; }
   .el-button.is-plain:active {
     background: #FFFFFF;
-    border-color: #4465d1;
-    color: #4465d1;
+    border-color: #1682e6;
+    color: #1682e6;
     outline: none; }
   .el-button.is-active {
-    color: #4465d1;
-    border-color: #4465d1; }
+    color: #1682e6;
+    border-color: #1682e6; }
   .el-button.is-disabled, .el-button.is-disabled:hover, .el-button.is-disabled:focus {
     color: #C0C4CC;
     cursor: not-allowed;
@@ -1239,42 +1239,42 @@
     padding: 12px; }
   .el-button--primary {
     color: #FFFFFF;
-    background-color: #4C70E8;
-    border-color: #4C70E8; }
+    background-color: #1890ff;
+    border-color: #1890ff; }
     .el-button--primary:hover, .el-button--primary:focus {
-      background: #708ded;
-      border-color: #708ded;
+      background: #46a6ff;
+      border-color: #46a6ff;
       color: #FFFFFF; }
     .el-button--primary:active {
-      background: #4465d1;
-      border-color: #4465d1;
+      background: #1682e6;
+      border-color: #1682e6;
       color: #FFFFFF;
       outline: none; }
     .el-button--primary.is-active {
-      background: #4465d1;
-      border-color: #4465d1;
+      background: #1682e6;
+      border-color: #1682e6;
       color: #FFFFFF; }
     .el-button--primary.is-disabled, .el-button--primary.is-disabled:hover, .el-button--primary.is-disabled:focus, .el-button--primary.is-disabled:active {
       color: #FFFFFF;
-      background-color: #a6b8f4;
-      border-color: #a6b8f4; }
+      background-color: #8cc8ff;
+      border-color: #8cc8ff; }
     .el-button--primary.is-plain {
-      color: #4C70E8;
-      background: #edf1fd;
-      border-color: #b7c6f6; }
+      color: #1890ff;
+      background: #e8f4ff;
+      border-color: #a3d3ff; }
       .el-button--primary.is-plain:hover, .el-button--primary.is-plain:focus {
-        background: #4C70E8;
-        border-color: #4C70E8;
+        background: #1890ff;
+        border-color: #1890ff;
         color: #FFFFFF; }
       .el-button--primary.is-plain:active {
-        background: #4465d1;
-        border-color: #4465d1;
+        background: #1682e6;
+        border-color: #1682e6;
         color: #FFFFFF;
         outline: none; }
       .el-button--primary.is-plain.is-disabled, .el-button--primary.is-plain.is-disabled:hover, .el-button--primary.is-plain.is-disabled:focus, .el-button--primary.is-plain.is-disabled:active {
-        color: #94a9f1;
-        background-color: #edf1fd;
-        border-color: #dbe2fa; }
+        color: #74bcff;
+        background-color: #e8f4ff;
+        border-color: #d1e9ff; }
   .el-button--success {
     color: #FFFFFF;
     background-color: #67C23A;
@@ -1353,42 +1353,42 @@
         border-color: #faecd8; }
   .el-button--danger {
     color: #FFFFFF;
-    background-color: #FA5E5F;
-    border-color: #FA5E5F; }
+    background-color: #F56C6C;
+    border-color: #F56C6C; }
     .el-button--danger:hover, .el-button--danger:focus {
-      background: #fb7e7f;
-      border-color: #fb7e7f;
+      background: #f78989;
+      border-color: #f78989;
       color: #FFFFFF; }
     .el-button--danger:active {
-      background: #e15556;
-      border-color: #e15556;
+      background: #dd6161;
+      border-color: #dd6161;
       color: #FFFFFF;
       outline: none; }
     .el-button--danger.is-active {
-      background: #e15556;
-      border-color: #e15556;
+      background: #dd6161;
+      border-color: #dd6161;
       color: #FFFFFF; }
     .el-button--danger.is-disabled, .el-button--danger.is-disabled:hover, .el-button--danger.is-disabled:focus, .el-button--danger.is-disabled:active {
       color: #FFFFFF;
-      background-color: #fdafaf;
-      border-color: #fdafaf; }
+      background-color: #fab6b6;
+      border-color: #fab6b6; }
     .el-button--danger.is-plain {
-      color: #FA5E5F;
-      background: #ffefef;
-      border-color: #fdbfbf; }
+      color: #F56C6C;
+      background: #fef0f0;
+      border-color: #fbc4c4; }
       .el-button--danger.is-plain:hover, .el-button--danger.is-plain:focus {
-        background: #FA5E5F;
-        border-color: #FA5E5F;
+        background: #F56C6C;
+        border-color: #F56C6C;
         color: #FFFFFF; }
       .el-button--danger.is-plain:active {
-        background: #e15556;
-        border-color: #e15556;
+        background: #dd6161;
+        border-color: #dd6161;
         color: #FFFFFF;
         outline: none; }
       .el-button--danger.is-plain.is-disabled, .el-button--danger.is-plain.is-disabled:hover, .el-button--danger.is-plain.is-disabled:focus, .el-button--danger.is-plain.is-disabled:active {
-        color: #fc9e9f;
-        background-color: #ffefef;
-        border-color: #fedfdf; }
+        color: #f9a7a7;
+        background-color: #fef0f0;
+        border-color: #fde2e2; }
   .el-button--info {
     color: #FFFFFF;
     background-color: #909399;
@@ -1453,16 +1453,16 @@
       padding: 7px; }
   .el-button--text {
     border-color: transparent;
-    color: #4C70E8;
+    color: #1890ff;
     background: transparent;
     padding-left: 0;
     padding-right: 0; }
     .el-button--text:hover, .el-button--text:focus {
-      color: #708ded;
+      color: #46a6ff;
       border-color: transparent;
       background-color: transparent; }
     .el-button--text:active {
-      color: #4465d1;
+      color: #1682e6;
       border-color: transparent;
       background-color: transparent; }
     .el-button--text.is-disabled, .el-button--text.is-disabled:hover, .el-button--text.is-disabled:focus {
@@ -1939,7 +1939,7 @@
     line-height: normal;
     height: 40px; }
     .el-checkbox.is-bordered.is-checked {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox.is-bordered.is-disabled {
       border-color: #EBEEF5;
       cursor: not-allowed; }
@@ -2013,20 +2013,20 @@
       color: #C0C4CC;
       cursor: not-allowed; }
     .el-checkbox__input.is-checked .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-checked .el-checkbox__inner::after {
         -webkit-transform: rotate(45deg) scaleY(1);
         transform: rotate(45deg) scaleY(1); }
     .el-checkbox__input.is-checked + .el-checkbox__label {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox__input.is-focus {
       /*focus时 视觉上区分*/ }
       .el-checkbox__input.is-focus .el-checkbox__inner {
-        border-color: #4C70E8; }
+        border-color: #1890ff; }
     .el-checkbox__input.is-indeterminate .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-indeterminate .el-checkbox__inner::before {
         content: '';
         position: absolute;
@@ -2054,7 +2054,7 @@
     -webkit-transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46);
     transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46); }
     .el-checkbox__inner:hover {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox__inner::after {
       -webkit-box-sizing: content-box;
       box-sizing: content-box;
@@ -2123,7 +2123,7 @@
     .el-checkbox-button__inner.is-round {
       padding: 12px 20px; }
     .el-checkbox-button__inner:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox-button__inner [class*="el-icon-"] {
       line-height: 0.9; }
       .el-checkbox-button__inner [class*="el-icon-"] + span {
@@ -2136,12 +2136,12 @@
     z-index: -1; }
   .el-checkbox-button.is-checked .el-checkbox-button__inner {
     color: #FFFFFF;
-    background-color: #4C70E8;
-    border-color: #4C70E8;
-    -webkit-box-shadow: -1px 0 0 0 #94a9f1;
-    box-shadow: -1px 0 0 0 #94a9f1; }
+    background-color: #1890ff;
+    border-color: #1890ff;
+    -webkit-box-shadow: -1px 0 0 0 #74bcff;
+    box-shadow: -1px 0 0 0 #74bcff; }
   .el-checkbox-button.is-checked:first-child .el-checkbox-button__inner {
-    border-left-color: #4C70E8; }
+    border-left-color: #1890ff; }
   .el-checkbox-button.is-disabled .el-checkbox-button__inner {
     color: #C0C4CC;
     cursor: not-allowed;
@@ -2158,7 +2158,7 @@
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .el-checkbox-button.is-focus .el-checkbox-button__inner {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-checkbox-button:last-child .el-checkbox-button__inner {
     border-radius: 0 4px 4px 0; }
   .el-checkbox-button--medium .el-checkbox-button__inner {
@@ -2195,7 +2195,7 @@
     padding: 10px;
     border-radius: 50%;
     color: #FFFFFF;
-    background-color: #4C70E8;
+    background-color: #1890ff;
     font-size: 0; }
     .el-transfer__button.is-with-texts {
       border-radius: 4px; }
@@ -2249,11 +2249,12 @@
     padding-left: 15px;
     display: block; }
     .el-transfer-panel__item + .el-transfer-panel__item {
-      margin-left: 0; }
+      margin-left: 0;
+      display: block !important; }
     .el-transfer-panel__item.el-checkbox {
       color: #606266; }
     .el-transfer-panel__item:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-transfer-panel__item.el-checkbox .el-checkbox__label {
       width: 100%;
       overflow: hidden;
