--- a/src/styles/element-ui/tree.css
+++ b/src/styles/element-ui/tree.css
@@ -877,7 +877,7 @@
     line-height: normal;
     height: 40px; }
     .el-checkbox.is-bordered.is-checked {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox.is-bordered.is-disabled {
       border-color: #EBEEF5;
       cursor: not-allowed; }
@@ -951,20 +951,20 @@
       color: #C0C4CC;
       cursor: not-allowed; }
     .el-checkbox__input.is-checked .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-checked .el-checkbox__inner::after {
         -webkit-transform: rotate(45deg) scaleY(1);
         transform: rotate(45deg) scaleY(1); }
     .el-checkbox__input.is-checked + .el-checkbox__label {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox__input.is-focus {
       /*focus时 视觉上区分*/ }
       .el-checkbox__input.is-focus .el-checkbox__inner {
-        border-color: #4C70E8; }
+        border-color: #1890ff; }
     .el-checkbox__input.is-indeterminate .el-checkbox__inner {
-      background-color: #4C70E8;
-      border-color: #4C70E8; }
+      background-color: #1890ff;
+      border-color: #1890ff; }
       .el-checkbox__input.is-indeterminate .el-checkbox__inner::before {
         content: '';
         position: absolute;
@@ -992,7 +992,7 @@
     -webkit-transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46);
     transition: border-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46), background-color 0.25s cubic-bezier(0.71, -0.46, 0.29, 1.46); }
     .el-checkbox__inner:hover {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
     .el-checkbox__inner::after {
       -webkit-box-sizing: content-box;
       box-sizing: content-box;
@@ -1061,7 +1061,7 @@
     .el-checkbox-button__inner.is-round {
       padding: 12px 20px; }
     .el-checkbox-button__inner:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-checkbox-button__inner [class*="el-icon-"] {
       line-height: 0.9; }
       .el-checkbox-button__inner [class*="el-icon-"] + span {
@@ -1074,12 +1074,12 @@
     z-index: -1; }
   .el-checkbox-button.is-checked .el-checkbox-button__inner {
     color: #FFFFFF;
-    background-color: #4C70E8;
-    border-color: #4C70E8;
-    -webkit-box-shadow: -1px 0 0 0 #94a9f1;
-    box-shadow: -1px 0 0 0 #94a9f1; }
+    background-color: #1890ff;
+    border-color: #1890ff;
+    -webkit-box-shadow: -1px 0 0 0 #74bcff;
+    box-shadow: -1px 0 0 0 #74bcff; }
   .el-checkbox-button.is-checked:first-child .el-checkbox-button__inner {
-    border-left-color: #4C70E8; }
+    border-left-color: #1890ff; }
   .el-checkbox-button.is-disabled .el-checkbox-button__inner {
     color: #C0C4CC;
     cursor: not-allowed;
@@ -1096,7 +1096,7 @@
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .el-checkbox-button.is-focus .el-checkbox-button__inner {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-checkbox-button:last-child .el-checkbox-button__inner {
     border-radius: 0 4px 4px 0; }
   .el-checkbox-button--medium .el-checkbox-button__inner {
@@ -1138,13 +1138,14 @@
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    color: #909399; }
+    color: #909399;
+    font-size: 14px; }
   .el-tree__drop-indicator {
     position: absolute;
     left: 0;
     right: 0;
     height: 1px;
-    background-color: #4C70E8; }
+    background-color: #1890ff; }
 
 .el-tree-node {
   white-space: nowrap;
@@ -1154,7 +1155,7 @@
     .el-tree-node:focus > .el-tree-node__content {
       background-color: #F5F7FA; }
   .el-tree-node.is-drop-inner > .el-tree-node__content .el-tree-node__label {
-    background-color: #4C70E8;
+    background-color: #1890ff;
     color: #fff; }
   .el-tree-node__content {
     display: -webkit-box;
@@ -1167,7 +1168,7 @@
     cursor: pointer; }
     .el-tree-node__content > .el-tree-node__expand-icon {
       padding: 6px; }
-    .el-tree-node__content > .el-checkbox {
+    .el-tree-node__content > label.el-checkbox {
       margin-right: 8px; }
     .el-tree-node__content:hover {
       background-color: #F5F7FA; }
@@ -1206,4 +1207,4 @@
     display: block; }
 
 .el-tree--highlight-current .el-tree-node.is-current > .el-tree-node__content {
-  background-color: #f1f4fd; }
+  background-color: #edf6ff; }
