--- a/src/styles/element-ui/upload.css
+++ b/src/styles/element-ui/upload.css
@@ -424,9 +424,9 @@
   .el-progress.is-warning .el-progress__text {
     color: #E6A23C; }
   .el-progress.is-exception .el-progress-bar__inner {
-    background-color: #FA5E5F; }
+    background-color: #F56C6C; }
   .el-progress.is-exception .el-progress__text {
-    color: #FA5E5F; }
+    color: #F56C6C; }
 
 .el-progress-bar {
   padding-right: 50px;
@@ -448,7 +448,7 @@
     left: 0;
     top: 0;
     height: 100%;
-    background-color: #4C70E8;
+    background-color: #1890ff;
     text-align: right;
     border-radius: 100px;
     line-height: 1;
@@ -633,13 +633,13 @@
       font-size: 28px;
       color: #8c939d; }
     .el-upload--picture-card:hover {
-      border-color: #4C70E8;
-      color: #4C70E8; }
+      border-color: #1890ff;
+      color: #1890ff; }
   .el-upload:focus {
-    border-color: #4C70E8;
-    color: #4C70E8; }
+    border-color: #1890ff;
+    color: #1890ff; }
     .el-upload:focus .el-upload-dragger {
-      border-color: #4C70E8; }
+      border-color: #1890ff; }
 
 .el-upload-dragger {
   background-color: #fff;
@@ -669,13 +669,13 @@
     font-size: 14px;
     text-align: center; }
     .el-upload-dragger .el-upload__text em {
-      color: #4C70E8;
+      color: #1890ff;
       font-style: normal; }
   .el-upload-dragger:hover {
-    border-color: #4C70E8; }
+    border-color: #1890ff; }
   .el-upload-dragger.is-dragover {
     background-color: rgba(32, 159, 255, 0.06);
-    border: 2px dashed #4C70E8; }
+    border: 2px dashed #1890ff; }
 
 .el-upload-list {
   margin: 0;
@@ -726,7 +726,7 @@
       font-size: 12px;
       cursor: pointer;
       opacity: 1;
-      color: #4C70E8; }
+      color: #1890ff; }
     .el-upload-list__item:hover {
       background-color: #F5F7FA; }
       .el-upload-list__item:hover .el-icon-close {
@@ -736,7 +736,7 @@
     .el-upload-list__item.is-success .el-upload-list__item-status-label {
       display: block; }
     .el-upload-list__item.is-success .el-upload-list__item-name:hover, .el-upload-list__item.is-success .el-upload-list__item-name:focus {
-      color: #4C70E8;
+      color: #1890ff;
       cursor: pointer; }
     .el-upload-list__item.is-success:focus:not(:hover) {
       /* 键盘focus */ }
@@ -780,7 +780,7 @@
     color: #606266;
     display: none; }
     .el-upload-list__item-delete:hover {
-      color: #4C70E8; }
+      color: #1890ff; }
   .el-upload-list--picture-card {
     margin: 0;
     display: inline;
