--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -31,11 +31,11 @@ $--color-primary-light-7: mix($--color-white, $--color-primary, 70%) !default; /
 $--color-primary-light-8: mix($--color-white, $--color-primary, 80%) !default; /* d9ecff */
 $--color-primary-light-9: mix($--color-white, $--color-primary, 90%) !default; /* ecf5ff */
 /// color|1|Functional Color|1
-$--color-success: #3ea751 !default;
+$--color-success: #67C23A !default;
 /// color|1|Functional Color|1
-$--color-warning: #f1c85f !default;
+$--color-warning: #E6A23C !default;
 /// color|1|Functional Color|1
-$--color-danger: #dd3e3e !default;
+$--color-danger: #F56C6C !default;
 /// color|1|Functional Color|1
 $--color-info: #909399 !default;
 
@@ -104,6 +104,7 @@ $--fill-base: $--color-white !default;
 /* Typography
 -------------------------- */
 $--font-path: 'fonts' !default;
+$--font-display: 'auto' !default;
 /// fontSize|1|Font Size|0
 $--font-size-extra-large: 20px !default;
 /// fontSize|1|Font Size|0
