feat(home): home page
首页开发

--- a/src/components/EzHeader/style.scss
+++ b/src/components/EzHeader/style.scss
@@ -1,6 +1,7 @@
 .el-header {
   display: flex;
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  background-color: #ffffff;
 
   .trigger {
     height: 64px;
