--- a/src/components/EzTagView/style.scss
+++ b/src/components/EzTagView/style.scss
@@ -1,9 +1,9 @@
 .ez-tag-view-container {
   padding: 0 10px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  background-color: #fff;
 
   .tag-view-wrapper {
-    background: #fff;
     height: 34px;
 
     .tag-view-item {
