--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -1,3 +1,10 @@
 .home-page {
-  height: 100vh;
+  .order {
+    height: 580px;
+  }
+
+  .chart {
+    margin: 20px auto 0;
+    padding-top: 20px;
+  }
 }
